# Sentinel2Cap

./: .gitignore  README.md  Sentinel2Cap.parquet  install_flash_attn.sh  license.txt  pyproject.toml
scripts/: captioning.py  metrics.py  prompts.py
